[project]
name = "tutorialllms"
version = "0.1.0"
description = "Primeros pasos con LLMs usando la librería Guidance de Microsoft."
authors = [
    {name = "Pablo Gutiérrez Sánchez",email = "pabgut02@ucm.es"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.4,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "guidance (>=0.2.3,<0.3.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "huggingface-hub (>=0.33.2,<0.34.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "llama-cpp-python (>=0.3.12,<0.4.0)",
    "accelerate (>=1.8.1,<2.0.0)",
    "bitsandbytes (>=0.46.1,<0.47.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "gpustat (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}
